--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}  # Assuming region is stored in secrets as well
+        aws-region: 'eu-west-1'  # Assuming region is stored in secrets as well
 
     - name: Retrieve EC2 IP Address
       id: get_ip
