test with env name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,11 @@ on:
       apply_changes:
         description: 'Apply changes (true/false)'
         default: 'false'
+
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
+    environment: lexim-dev  # Adjust this based on your actual environment
 
     steps:
     - name: Determine Environment
@@ -22,15 +24,7 @@ jobs:
         case $EC2_INSTANCE_NAME in
           *lexim-dev*) ENV_NAME="lexim-dev" ;;
           *lexim-stage*) ENV_NAME="lexim-stage" ;;
-          *lexim-prod*) ENV_NAME="lexim-prod" ;;
-          *custody-dev*) ENV_NAME="custody-dev" ;;
-          *custody-stage*) ENV_NAME="custody-stage" ;;
-          *dau-vault-prod*) ENV_NAME="dau-vault-prod" ;;
-          *tcp-prod*) ENV_NAME="tcp-prod" ;;
-          *tcp-dev*) ENV_NAME="tcp-dev" ;;
-          *dbg-prod*) ENV_NAME="dbg-prod" ;;
-          *dbg-stage*) ENV_NAME="dbg-stage" ;;
-          *dbg-dev*) ENV_NAME="dbg-dev" ;;
+          # ... (other cases)
           *) 
             echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
             exit 1
@@ -48,8 +42,7 @@ jobs:
 
     - name: Debug AWS Secrets
       run: |
-        echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
-        echo "AWS_SECRET_ACCESS_KEY: (masked)"
+        echo "AWS_ACCESS_KEY_ID: ${GITHUB_ENV.AWS_ACCESS_KEY_ID:-not set}"
 
     - name: Retrieve EC2 IP Address
       id: get_ip
