--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,13 +20,17 @@ jobs:
       ENV_NAME: ${{ github.event.inputs.environment_name }}
       AWS_REGION: 'eu-west-1'
 
-    steps: # Steps should be listed inside the jobs section
+    steps:
     - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v2
+      uses: aws-actions/configure-aws-credentials@v2.4.0
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'eu-west-1'
+
+    - name: Debug AWS CLI credentials
+      run: |
+        aws sts get-caller-identity
 
     - name: Retrieve EC2 IP Address
       id: get_ip
