--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
-    environment: dbg-dev  # Adjust this based on your actual environment
+    environment: lexim-stage  # Adjust this based on your actual environment
 
     steps:
     - name: Determine Environment
