--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,30 +13,47 @@ on:
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
-    environment: lexim-stage  # Adjust this based on your actual environment
 
     steps:
     - name: Determine Environment
       id: determine_env
       run: |
         EC2_INSTANCE_NAME="${{ github.event.inputs.ec2_instance_name }}"
-        
-        case $EC2_INSTANCE_NAME in
-          *lexim-dev*) ENV_NAME="lexim-dev" ;;
-          *lexim-stage*) ENV_NAME="lexim-stage" ;;
-          # ... (other cases)
-          *) 
-            echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
-            exit 1
-            ;;
-        esac
+
+        if [[ "$EC2_INSTANCE_NAME" == *"lexim-dev"* ]]; then
+          ENV_NAME="lexim-dev"
+        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-stage"* ]]; then
+          ENV_NAME="lexim-stage"
+        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-prod"* ]]; then
+          ENV_NAME="lexim-prod"
+        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-dev"* ]]; then
+          ENV_NAME="dbg-dev"
+        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-stage"* ]]; then
+          ENV_NAME="dbg-stage"
+        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-prod"* ]]; then
+          ENV_NAME="dbg-prod"
+        elif [[ "$EC2_INSTANCE_NAME" == *"custody-dev"* ]]; then
+          ENV_NAME="custody-dev"
+        elif [[ "$EC2_INSTANCE_NAME" == *"custody-stage"* ]]; then
+          ENV_NAME="custody-stage"
+        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-dev"* ]]; then
+          ENV_NAME="tcp-dev"
+        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-prod"* ]]; then
+          ENV_NAME="tcp-prod"
+        elif [[ "$EC2_INSTANCE_NAME" == *"dau-vault-prod"* ]]; then
+          ENV_NAME="dau-vault-prod"
+        else
+          echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
+          exit 1
+        fi
+
         echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
-    - name: Set up AWS CLI (Same AWS Secrets for All Environments)
+
+    - name: Set up AWS CLI (Using AWS Secrets)
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        # aws-region: 'eu-west-1'
         aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Debug AWS Secrets
@@ -46,6 +63,7 @@ jobs:
         else
           echo "AWS_ACCESS_KEY_ID is set"
         fi
+
     - name: Retrieve EC2 IP Address
       id: get_ip
       run: |
@@ -53,16 +71,19 @@ jobs:
           --filters "Name=tag:Name,Values=${{ github.event.inputs.ec2_instance_name }}" \
           --query "Reservations[*].Instances[*].InstanceId" \
           --output text)
-        
+
         if [ -z "$INSTANCE_ID" ]; then
           echo "EC2 instance with the name '${{ github.event.inputs.ec2_instance_name }}' not found"
           exit 1
         fi
+
         IP_ADDRESS=$(aws ec2 describe-instances \
           --instance-ids $INSTANCE_ID \
           --query "Reservations[*].Instances[*].PublicIpAddress" \
           --output text)
+
         echo "IP_ADDRESS=$IP_ADDRESS" >> $GITHUB_ENV
+
     - name: Output IP Address
       run: |
         echo "The IP address is: ${{ env.IP_ADDRESS }}"
