--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,54 +19,16 @@ jobs:
       id: determine_env
       run: |
         EC2_INSTANCE_NAME="${{ github.event.inputs.ec2_instance_name }}"
-
-        if [[ "$EC2_INSTANCE_NAME" == *"lexim-dev"* ]]; then
-          ENV_NAME="lexim-dev"
-          AWS_REGION="eu-west-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-stage"* ]]; then
-          ENV_NAME="lexim-stage"
-          AWS_REGION="eu-west-3"
-        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-prod"* ]]; then
-          ENV_NAME="lexim-prod"
-          AWS_REGION="eu-west-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-dev"* ]]; then
-          ENV_NAME="dbg-dev"
-          AWS_REGION="us-west-2"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-stage"* ]]; then
-          ENV_NAME="dbg-stage"
-          AWS_REGION="eu-west-3"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-prod"* ]]; then
-          ENV_NAME="dbg-prod"
-          AWS_REGION="us-west-2"
-        elif [[ "$EC2_INSTANCE_NAME" == *"custody-dev"* ]]; then
-          ENV_NAME="custody-dev"
-          AWS_REGION="us-east-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"custody-stage"* ]]; then
-          ENV_NAME="custody-stage"
-          AWS_REGION="us-east-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-dev"* ]]; then
-          ENV_NAME="tcp-dev"
-          AWS_REGION="us-west-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-prod"* ]]; then
-          ENV_NAME="tcp-prod"
-          AWS_REGION="us-west-1"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dau-vault-prod"* ]]; then
-          ENV_NAME="dau-vault-prod"
-          AWS_REGION="ap-southeast-1"
-        else
-          echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
-          exit 1
-        fi
-
+        case $EC2_INSTANCE_NAME in
+          *lexim-dev*) ENV_NAME="lexim-dev" ;;
+          *lexim-stage*) ENV_NAME="lexim-stage" ;;
+          *lexim-prod*) ENV_NAME="lexim-prod" ;;
+          *) 
+            echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
+            exit 1
+            ;;
+        esac
         echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
-        echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
-
-    - name: Set up AWS CLI (Using AWS Secrets)
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
 
     - name: Debug AWS Secrets
       run: |
@@ -75,6 +37,25 @@ jobs:
         else
           echo "AWS_ACCESS_KEY_ID is set"
         fi
+        
+        if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
+          echo "AWS_SECRET_ACCESS_KEY is not set"
+        else
+          echo "AWS_SECRET_ACCESS_KEY is set"
+        fi
+        
+        if [ -z "${{ secrets.AWS_REGION }}" ]; then
+          echo "AWS_REGION is not set"
+        else
+          echo "AWS_REGION is set"
+        fi
+
+    - name: Set up AWS CLI (Using AWS Secrets)
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Retrieve EC2 IP Address
       id: get_ip
