--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,56 +9,22 @@ on:
       apply_changes:
         description: 'Apply changes (true/false)'
         default: 'false'
+      environment:
+        description: 'The environment (e.g., dev, stage, prod)'
+        required: true
 
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
+    environment: ${{ github.event.inputs.environment }}  # Use the input directly here
 
     steps:
-    - name: Determine Environment
-      id: determine_env
-      run: |
-        EC2_INSTANCE_NAME="${{ github.event.inputs.ec2_instance_name }}"
-
-        if [[ "$EC2_INSTANCE_NAME" == *"lexim-dev"* ]]; then
-          ENV_NAME="lexim-dev"
-        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-stage"* ]]; then
-          ENV_NAME="lexim-stage"
-        elif [[ "$EC2_INSTANCE_NAME" == *"lexim-prod"* ]]; then
-          ENV_NAME="lexim-prod"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-dev"* ]]; then
-          ENV_NAME="dbg-dev"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-stage"* ]]; then
-          ENV_NAME="dbg-stage"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dbg-prod"* ]]; then
-          ENV_NAME="dbg-prod"
-        elif [[ "$EC2_INSTANCE_NAME" == *"custody-dev"* ]]; then
-          ENV_NAME="custody-dev"
-        elif [[ "$EC2_INSTANCE_NAME" == *"custody-stage"* ]]; then
-          ENV_NAME="custody-stage"
-        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-dev"* ]]; then
-          ENV_NAME="tcp-dev"
-        elif [[ "$EC2_INSTANCE_NAME" == *"tcp-prod"* ]]; then
-          ENV_NAME="tcp-prod"
-        elif [[ "$EC2_INSTANCE_NAME" == *"dau-vault-prod"* ]]; then
-          ENV_NAME="dau-vault-prod"
-        else
-          echo "Unknown environment for EC2 instance: $EC2_INSTANCE_NAME"
-          exit 1
-        fi
-
-        echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
-
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Use the same secret
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Use the same secret
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Assuming secrets are environment agnostic
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Assuming secrets are environment agnostic
+        aws-region: ${{ secrets.AWS_REGION }}  # Assuming secrets are environment agnostic
 
     - name: Debug AWS Secrets
       run: |
