--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,9 @@ jobs:
         echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
         echo "Determined environment: $ENVIRONMENT"
 
+    - name: Set Environment Dynamically
+      run: echo "::set-output name=env::${{ env.ENVIRONMENT }}"
+
     - name: Retrieve EC2 IP Address
       id: get_ip
       run: |
