--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
+    environment: ${{ github.determine_env.ENVIRONMENT }}
 
     steps:
     - name: Set up AWS CLI
