--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,15 +13,47 @@ on:
 jobs:
   get-ec2-ip:
     runs-on: ubuntu-latest
-    environment: ${{ github.determine_env.ENVIRONMENT }}
 
     steps:
-    - name: Set up AWS CLI
+    - name: Determine Environment from EC2 Instance Name
+      id: determine_env
+      run: |
+        EC2_INSTANCE_NAME=${{ github.event.inputs.ec2_instance_name }}
+        case $EC2_INSTANCE_NAME in
+          lexim-dev-bastion) ENVIRONMENT="lexim-dev" ;;
+          lexim-stage-bastion) ENVIRONMENT="lexim-stage" ;;
+          lexim-prod-bastion) ENVIRONMENT="lexim-prod" ;;
+          tcp-dev-bastion) ENVIRONMENT="tcp-dev" ;;
+          tcp-prod-bastion) ENVIRONMENT="tcp-prod" ;;
+          custody-dev-bastion) ENVIRONMENT="custody-dev" ;;
+          custody-stage-bastion) ENVIRONMENT="custody-stage" ;;
+          dbg-dev-bastion) ENVIRONMENT="dbg-dev" ;;
+          dbg-stage-bastion) ENVIRONMENT="dbg-stage" ;;
+          dbg-prod-bastion) ENVIRONMENT="dbg-prod" ;;
+          dau-vault-prod-bastion) ENVIRONMENT="dau-vault-prod" ;;
+          lexim-prod-dxb-bastion) ENVIRONMENT="lexim-prod-dxb" ;;
+          *) echo "No matching environment found for the EC2 instance name: $EC2_INSTANCE_NAME"; exit 1 ;;
+        esac
+        echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
+        echo "Environment determined as: $ENVIRONMENT"
+
+    - name: Set Environment Context for AWS CLI Setup
+      run: |
+        if [ "$ENVIRONMENT" = "lexim-dev" ]; then
+          echo "Using environment: lexim-dev"
+        elif [ "$ENVIRONMENT" = "lexim-stage" ]; then
+          echo "Using environment: lexim-stage"
+        elif [ "$ENVIRONMENT" = "lexim-prod" ]; then
+          echo "Using environment: lexim-prod"
+        # Add more conditions as needed for other environments
+        fi
+
+    - name: Set up AWS CLI for the determined environment
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Same secret key used for each environment
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Same secret key used for each environment
+        aws-region: ${{ secrets.AWS_REGION }}  # Same region key used for each environment
 
     - name: Debug AWS Secrets
       run: |
@@ -30,31 +62,6 @@ jobs:
         else
           echo "AWS_ACCESS_KEY_ID is set"
         fi
-
-    - name: Determine Environment from Instance Name
-      id: determine_env
-      run: |
-        case "${{ github.event.inputs.ec2_instance_name }}" in
-          lexim-dev-*)    ENVIRONMENT="lexim-dev" ;;
-          lexim-stage-*)  ENVIRONMENT="lexim-stage" ;;
-          lexim-prod-*)   ENVIRONMENT="lexim-prod" ;;
-          tcp-dev-*)      ENVIRONMENT="tcp-dev" ;;
-          tcp-prod-*)     ENVIRONMENT="tcp-prod" ;;
-          custody-dev-*)  ENVIRONMENT="custody-dev" ;;
-          custody-stage-*) ENVIRONMENT="custody-stage" ;;
-          dbg-dev-*)      ENVIRONMENT="dbg-dev" ;;
-          dbg-stage-*)    ENVIRONMENT="dbg-stage" ;;
-          dbg-prod-*)     ENVIRONMENT="dbg-prod" ;;
-          dau-vault-prod-*) ENVIRONMENT="dau-vault-prod" ;;
-          lexim-prod-dxb-*) ENVIRONMENT="lexim-prod-dxb" ;;
-          *) echo "No matching environment found for instance name '${{ github.event.inputs.ec2_instance_name }}'"
-             exit 1 ;;
-        esac
-        echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
-        echo "Determined environment: $ENVIRONMENT"
-
-    - name: Set Environment Dynamically
-      run: echo "::set-output name=env::${{ env.ENVIRONMENT }}"
 
     - name: Retrieve EC2 IP Address
       id: get_ip
@@ -75,4 +82,5 @@ jobs:
 
     - name: Output IP Address
       run: |
-        echo "The IP address for ${{ github.event.inputs.ec2_instance_name }} in ${{ env.ENVIRONMENT }} is: ${{ env.IP_ADDRESS }}"
+        echo "The IP address is: ${{ env.IP_ADDRESS }}"
+        echo "The environment is: ${{ env.ENVIRONMENT }}"
