--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,48 +20,29 @@ jobs:
       run: |
         EC2_INSTANCE_NAME=${{ github.event.inputs.ec2_instance_name }}
         case $EC2_INSTANCE_NAME in
-          lexim-dev-bastion) ENVIRONMENT="lexim-dev" ;;
-          lexim-stage-bastion) ENVIRONMENT="lexim-stage" ;;
-          lexim-prod-bastion) ENVIRONMENT="lexim-prod" ;;
-          tcp-dev-bastion) ENVIRONMENT="tcp-dev" ;;
-          tcp-prod-bastion) ENVIRONMENT="tcp-prod" ;;
-          custody-dev-bastion) ENVIRONMENT="custody-dev" ;;
-          custody-stage-bastion) ENVIRONMENT="custody-stage" ;;
-          dbg-dev-bastion) ENVIRONMENT="dbg-dev" ;;
-          dbg-stage-bastion) ENVIRONMENT="dbg-stage" ;;
-          dbg-prod-bastion) ENVIRONMENT="dbg-prod" ;;
-          dau-vault-prod-bastion) ENVIRONMENT="dau-vault-prod" ;;
-          lexim-prod-dxb-bastion) ENVIRONMENT="lexim-prod-dxb" ;;
+          lexim-dev-bastion-host) ENVIRONMENT="lexim-dev" ;;
+          lexim-stage-bastion-host) ENVIRONMENT="lexim-stage" ;;
+          lexim-prod-bastion-host) ENVIRONMENT="lexim-prod" ;;
+          tcp-dev-bastion-host) ENVIRONMENT="tcp-dev" ;;
+          tcp-prod-bastion-host) ENVIRONMENT="tcp-prod" ;;
+          custody-dev-bastion-host) ENVIRONMENT="custody-dev" ;;
+          custody-stage-bastion-host) ENVIRONMENT="custody-stage" ;;
+          dbg-dev-bastion-host) ENVIRONMENT="dbg-dev" ;;
+          dbg-stage-bastion-host) ENVIRONMENT="dbg-stage" ;;
+          dbg-prod-bastion-host) ENVIRONMENT="dbg-prod" ;;
+          dau-vault-prod-bastion-host) ENVIRONMENT="dau-vault-prod" ;;
+          lexim-prod-dxb-bastion-host) ENVIRONMENT="lexim-prod-dxb" ;;
           *) echo "No matching environment found for the EC2 instance name: $EC2_INSTANCE_NAME"; exit 1 ;;
         esac
         echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
         echo "Environment determined as: $ENVIRONMENT"
 
-    - name: Set Environment Context for AWS CLI Setup
-      run: |
-        if [ "$ENVIRONMENT" = "lexim-dev" ]; then
-          echo "Using environment: lexim-dev"
-        elif [ "$ENVIRONMENT" = "lexim-stage" ]; then
-          echo "Using environment: lexim-stage"
-        elif [ "$ENVIRONMENT" = "lexim-prod" ]; then
-          echo "Using environment: lexim-prod"
-        # Add more conditions as needed for other environments
-        fi
-
     - name: Set up AWS CLI for the determined environment
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Same secret key used for each environment
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Same secret key used for each environment
-        aws-region: ${{ secrets.AWS_REGION }}  # Same region key used for each environment
-
-    - name: Debug AWS Secrets
-      run: |
-        if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then
-          echo "AWS_ACCESS_KEY_ID is not set"
-        else
-          echo "AWS_ACCESS_KEY_ID is set"
-        fi
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Retrieve EC2 IP Address
       id: get_ip
