--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,20 @@ jobs:
         echo "Environment determined as: $ENVIRONMENT"
 
     - name: Set up AWS CLI for the determined environment
+      id: aws_setup
+      run: |
+        # Fetch AWS credentials based on the determined environment
+        echo "Fetching secrets for the environment: ${{ env.ENVIRONMENT }}"
+        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+        echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Retrieve EC2 IP Address
       id: get_ip
