--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           dau-vault-prod-bastion-host) ENVIRONMENT="dau-vault-prod" ;;
           lexim-prod-dxb-bastion-host) ENVIRONMENT="lexim-prod-dxb" ;;
           *) echo "No matching environment found for the EC2 instance name: $EC2_INSTANCE_NAME"; exit 1 ;;
-        
+        esac
         echo "environment=${ENVIRONMENT}" >> $GITHUB_ENV
         echo "::set-output name=environment::$ENVIRONMENT"
         echo "Environment determined as: $ENVIRONMENT"
